correct spacing on heatmap

--- a/h/css/app.scss
+++ b/h/css/app.scss
@@ -76,7 +76,6 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
 
 //HEATMAP STUFF////////////////////////////////
 #heatmap-container {
-  left: 10px;
   height: 100%;
   position: fixed;
 }
